Changelog for Six
-----------------

This file lists the changes in each six version.

1.1
---

- Issue #3: Add six.moves mappings for filter, map, and zip.


1.0.0
-----

- Issue #2: u() on Python 2.x now resolves unicode escapes.

- Expose an API for adding mappings to six.moves.


1.0 beta 1
----------

- Reworked six into one .py file.  This breaks imports.  Please tell me if you
  are interested in an import compatibility layer.